--- a/package.json
+++ b/package.json
@@ -30,8 +30,12 @@
         ],
         "targets": [
             "node16-win-x64",
+            "node16-win-x86",
+            "node16-win-arm64",
             "node16-macos-arm64",
-            "node16-linux-x64"
+            "node16-macos-x64",
+            "node16-linux-x64",
+            "node16-linux-arm64"
         ],
         "outputPath": "dist",
         "compress": "GZip",
