--- a/package.json
+++ b/package.json
@@ -24,18 +24,11 @@
     "pkg": {
         "assets": [
             "index.html",
-            "build/**/*",
-            "mouse_control.node",
-            "build/Release/mouse_control.node"
+            "mouse_control.node"
         ],
         "targets": [
-            "node16-win-x64",
-            "node16-win-x86",
             "node16-win-arm64",
-            "node16-macos-arm64",
-            "node16-macos-x64",
-            "node16-linux-x64",
-            "node16-linux-arm64"
+            "node16-macos-arm64"
         ],
         "outputPath": "dist",
         "compress": "GZip",
